[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://fish.gd" type="Script" id=2]

[node name="RigidBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -11.1362, 2.6727 )
polygon = PoolVector2Array( -27.9364, -28, 50.4627, -19.5365, 47.79, 13.4268, -16.3547, 20.9994 )

[node name="icon" type="Sprite" parent="."]
position = Vector2( 3.24504, -1.05031 )
scale = Vector2( 1, 0.51975 )
texture = ExtResource( 1 )

[node name="wall" type="Area2D" parent="."]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="wall"]
position = Vector2( -11.1362, 2.6727 )
scale = Vector2( 1.1, 1.1 )
polygon = PoolVector2Array( -27.9364, -28, 50.4627, -19.5365, 47.79, 13.4268, -16.3547, 20.9994 )

[node name="TimeToMove" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="wall" to="." method="_on_wall_body_entered"]
[connection signal="timeout" from="TimeToMove" to="." method="_on_TimeToMove_timeout"]
